[project]
name = "web-crawler-cli"
version = "0.0.2"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["beautifulsoup4>=4.12.3", "requests>=2.32.3"]

[tool.uv]
dev-dependencies = [
  "ruff>=0.6.3",
  "basedpyright>=1.17.1",
  "pre-commit>=3.6.1",
  "pytest>=8.0.0",
  "pytest-sugar>=1.0.0",
  "requests-mock>=1.11.0",
  "pytest-mock>=3.12.0",
  "pysnooper>=1.2.0",
]

[tool.basedpyright]
typeCheckingMode = "all"

[tool.ruff]
line-length = 88
exclude = ['.git', '__pycache__', '__init__.py', '.mypy_cache', '.pytest_cache']
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C4", # flake8-comprehensions
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long
  "C901", # Comprehension is too complex (11 > 10)
  "W191", # indentation contains tabs
  "E402",
]
unfixable = ["F841"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
